[gd_scene load_steps=4 format=3 uid="uid://lcggc762kvjq"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_yklf1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_habj0"]
bg_color = Color(0.833216, 0.467925, 0.60538, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkubr"]
bg_color = Color(0.710891, 0.498647, 0.832672, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yklf1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 270.0
offset_bottom = 600.0
color = Color(1, 0.892, 0.76, 0.721569)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 11.0
offset_right = 174.0
offset_bottom = 34.0
text = "Main Menu"

[node name="Ingredients" type="Button" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 7.0
offset_top = 52.0
offset_right = 130.0
offset_bottom = 162.0
theme_override_styles/normal = SubResource("StyleBoxFlat_habj0")
text = "Ingredients"

[node name="Recipe" type="Button" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 109.0
offset_top = 219.0
offset_right = 259.0
offset_bottom = 369.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hkubr")
text = "Add Recipe"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 552.0
offset_right = 84.0
offset_bottom = 583.0
text = "Exit"

[connection signal="pressed" from="Ingredients" to="." method="_on_ingredients_pressed"]
[connection signal="pressed" from="Recipe" to="." method="_on_recipes_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
